# activation-steering

./: .gitignore  README.md  analyze.py  evaluate.py  modal_app.py  pyproject.toml  run.py
behaviors/concise/: pairs.json
behaviors/concise/runs/: qwen3.5-9b_mean.json
behaviors/permissive/: pairs.json
behaviors/permissive/runs/: qwen3.5-9b_mean.json  qwen3.5-9b_mean_scored.json
behaviors/sutro_tower/: pairs.json
behaviors/sutro_tower/runs/: qwen3.5-9b_mean.json  qwen3.5-9b_mean_scored.json
